<resources>
    <string name="app_name">Parking control</string>
    <string name="txtBienvenido">Bienvenido a Parking system</string>
    <string name="txtEmpezar">Inicia sesión para empezar</string>
    <string name="txtUsuario">Nombre de usuario</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="txtRContraseña">Repetir Contraseña</string>
    <string name="txtIniciar">Iniciar Sesión</string>
    <string name="txtRegistrarse"><u>Registrarse</u></string>
    <string name="txtRegistrarse2">Registrarse</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtEmail">Correo electrónico</string>
    <string name="txtAceptar">Aceptar</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="txtUser">Usuario</string>
    <string name="txtUserEmail">usuario@parking.com</string>
</resources>